--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: app
     working_dir: /app
     volumes:
-      - ./frontend:/app
+      - ./app:/app
     ports:
       - "5173:5173"
     command: ["npm", "run", "dev", "--", "--host"]
