fix: ajustado  nomes de diretorios e erros na submissão dos arquivos

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -15,3 +15,6 @@ RUN pecl install redis && docker-php-ext-enable redis
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 
 WORKDIR /var/www/html
+
+RUN chown -R www-data:www-data storage bootstrap/cache \
+    && chmod -R 775 storage bootstrap/cache
