--- a/api/.env.example
+++ b/api/.env.example
@@ -1,17 +1,12 @@
-APP_NAME=Laravel
+APP_NAME=LocaFilmes
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-APP_LOCALE=en
-APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
-
-APP_MAINTENANCE_DRIVER=file
-# APP_MAINTENANCE_STORE=database
-
-# PHP_CLI_SERVER_WORKERS=4
+APP_LOCALE=pt_BR
+APP_FALLBACK_LOCALE=pt_BR
+APP_FAKER_LOCALE=pt_BR
 
 BCRYPT_ROUNDS=12
 
@@ -21,11 +16,22 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=5432
-DB_DATABASE=api
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=app
+DB_USERNAME=postgres
+DB_PASSWORD=postgres
+
+CACHE_DRIVER=redis
+CACHE_STORE=redis
+CACHE_PREFIX=locafilmes_
+
+REDIS_CLIENT=predis
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_PASSWORD=null
+REDIS_DB=0
+REDIS_CACHE_DB=1
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -33,27 +39,19 @@ SESSION_ENCRYPT=false
 SESSION_PATH=/
 SESSION_DOMAIN=null
 
+QUEUE_CONNECTION=redis
+
 BROADCAST_CONNECTION=log
+
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
 
-CACHE_STORE=database
-# CACHE_PREFIX=
-
-MEMCACHED_HOST=127.0.0.1
-
-REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
-
-MAIL_MAILER=log
+MAIL_MAILER=smtp
 MAIL_SCHEME=null
-MAIL_HOST=127.0.0.1
-MAIL_PORT=2525
+MAIL_HOST=mailhog
+MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_ADDRESS="noreply@locafilmes.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -62,4 +60,6 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-VITE_APP_NAME="${APP_NAME}"
+MEMCACHED_HOST=127.0.0.1
+
+PHP_CLI_SERVER_WORKERS=4
